# PUCHIK

./: .env  .gitignore  .temp.xyz  LICENSE  MANIFEST.in  Pipfile  README.md  densities.py  main.py  output_cells.txt  output_facets.txt  pyproject.toml  requirements.txt  setup.py
.fleet/: run.json
AICON/: __init__.py
AICON.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
AICON/test/: mol_parts.py  test.py
PUCHIK/: __init__.py
PUCHIK.egg-info/: PKG-INFO
PUCHIK/grid_project/: __init__.py  settings.py
PUCHIK/test/: TY79_TX0_50_50_data_1.npy  test.py  test_interface.py
grid_project.egg-info/: PKG-INFO  SOURCES.txt
grid_project_1.egg-info/: PKG-INFO  SOURCES.txt
input_files/: indo.itp  indo.prm  trito.itp  trito.prm  triton_indo.top  triton_pure.top
mesh/: densities.py
src/: densities.py  pyproject.toml  requirements.txt  setup.py  utils.cp310-win_amd64.pyd
src/grid_project/: densities.py  settings.py
src/grid_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: grid.npy  mesh.npy  test.py
tests/: coords_to_gro.py  inside.gro  inside.npy  inside_1.gro  inside_1.npy  inside_2.gro  inside_2.npy  inside_3.npy  inside_4.gro  main.py  mesh.npy  mesh_coordinates.npy  mesh_coordinates_1.gro  mesh_coordinates_1.npy  mesh_mat.npy  mesh_mat_01.npy  mesh_mat_5r.npy  mol_parts.py  outside.gro  outside.npy  outside_1.gro  outside_1.npy  outside_2.gro  outside_2.npy  outside_3.gro  outside_4.npy  selection_coords.npy  selection_coords_1.npy  sort.pyx
utilities/: decorators.py  universal_functions.py
volume/: monte_carlo.py
(+37 files in other folders)
